# Onethinx_Project_Examples

./: .gitignore  README.md
Example_ADC/: .gitignore  README.md  meson.build
Example_ADC/Onethinx_Creator.cydsn/: Onethinx_Creator.cydwr  Onethinx_Creator.cyfit  Onethinx_Creator.cyprj.Rolf  Onethinx_Creator.cyprj.Tomislav  Onethinx_Creator.cywrk.Rolf  Onethinx_Creator.cywrk.Tomislav  Onethinx_Creator.rpt  Onethinx_Creator_timing.html  cy8c6xx7_cm4_dual.icf.old  headerIncludeDirs.txt  makefile  sourceFiles.txt
Example_ADC/source/: main.c
Example_AT_Commands/: LICENSE  README.md  cross_gcc.build  meson.build
Example_AT_Commands/Onethinx_Creator.cydsn/: Onethinx_Creator.cycdx  Onethinx_Creator.cydwr  Onethinx_Creator.cyfit  Onethinx_Creator.cyprj  Onethinx_Creator.rpt  Onethinx_Creator_timing.html  main_cm0p.c  (+2 more)
Example_CapSense/: CMakeLists.txt  README.md  cross_gcc.build  meson.build
Example_CapSense/Onethinx_Creator.cydsn/: Onethinx_Creator.cyfit  Onethinx_Creator.cyprj  Onethinx_Creator.cyprj.Rolf  Onethinx_Creator.cyprj.Tomislav  Onethinx_Creator.cywrk  Onethinx_Creator.cywrk.Rolf  Onethinx_Creator.cywrk.Tomislav  Onethinx_Creator.rpt  Onethinx_Creator.svd  Onethinx_Creator_timing.html  app_source.mk  cy8c6xx7_cm0plus.ld.old  cy8c6xx7_cm0plus.scat.old  headerIncludeDirs.txt  librarySources.txt  main_cm4.c  makefile  platform_debug.mk  sourceFiles.txt
Example_CapSense/Onethinx_Creator.cydsn/CortexM0p/ARM_GCC_541/Debug/: CapSense_Control.lst  CapSense_Filter.lst  CapSense_INT.lst  CapSense_Processing.lst  CapSense_Sensing.lst  CapSense_SensingCSD_LL.lst  CapSense_Structure.lst  CapSense_Tuner.lst  I2C_CapSense.lst  LINK_options.txt  Onethinx_Creator.elf  Onethinx_Creator.hex  Onethinx_Creator.map  Onethinx_Creator_link.elf  SOURCE_C__ARM_GCC_GENERIC.txt  cy_ble_clk.lst  cy_device.lst  cy_efuse.lst  cy_flash.lst  cy_gpio.lst  cy_ipc_drv.lst  cy_ipc_pipe.lst  cy_ipc_sema.lst  cy_lvd.lst  cy_profile.lst  cy_prot.lst  cy_scb_common.lst  cy_scb_ezi2c.lst  cy_scb_i2c.lst  cy_scb_spi.lst  cy_scb_uart.lst  cy_sysanalog.lst  cy_sysclk.lst  cy_sysint.lst  cy_syslib.lst  cy_syslib_gcc.lst  cy_syspm.lst  cy_systick.lst  cy_trigmux.lst  cy_wdt.lst  (+6 more)
Example_CapSense/Onethinx_Creator.cydsn/CortexM0p/ARM_GCC_541/Debug/.deps/: SOURCE_C__ARM_GCC_GENERIC.P
Example_CapSense/Onethinx_Creator.cydsn/CortexM4/ARM_GCC_541/Debug/: CapSense_Control.lst  CapSense_Filter.lst  CapSense_INT.lst  CapSense_Processing.lst  CapSense_Sensing.lst  CapSense_SensingCSD_LL.lst  CapSense_Structure.lst  CapSense_Tuner.lst  I2C_CapSense.lst  LINK_options.txt  Onethinx_Creator.elf  Onethinx_Creator.hex  Onethinx_Creator.map  Onethinx_Creator_link.elf  Onethinx_Creator_signed.elf  SOURCE_C__ARM_GCC_GENERIC.txt  cy_ble_clk.lst  cy_device.lst  cy_efuse.lst  cy_flash.lst  cy_gpio.lst  cy_ipc_drv.lst  cy_ipc_pipe.lst  cy_ipc_sema.lst  cy_lvd.lst  cy_profile.lst  cy_prot.lst  cy_scb_common.lst  cy_scb_ezi2c.lst  cy_scb_i2c.lst  cy_scb_spi.lst  cy_scb_uart.lst  cy_sysanalog.lst  cy_sysclk.lst  cy_sysint.lst  cy_syslib.lst  cy_syslib_gcc.lst  cy_syspm.lst  cy_systick.lst  cy_trigmux.lst  (+6 more)
Example_CapSense/Onethinx_Creator.cydsn/CortexM4/ARM_GCC_541/Debug/.deps/: SOURCE_C__ARM_GCC_GENERIC.P
Example_CapSense/Onethinx_Creator.cydsn/Export/: PSoCCreatorExportIDECortexM0p.xml  PSoCCreatorExportIDECortexM4.xml  postbuildCortexM4.bat
Example_CapSense/Onethinx_Creator.cydsn/Export/ARM_GCC_Generic/: libraryOrderCortexM0p.txt  libraryOrderCortexM4.txt
Example_CapSense/Onethinx_Creator.cydsn/Generated_Source/PSoC6/: CapSense_Control.c  CapSense_Filter.c  CapSense_Filter.h  CapSense_INT.c  CapSense_Processing.h  CapSense_SensingCSD_LL.c  CapSense_SensingCSD_LL.h  CapSense_SmartSense_LL.h  CapSense_Structure.c  cyfitter_cfg.c  cyfitter_cfg_otx.c  cyfitter_sysint.h  gen_source.mk
Example_CapSense/Onethinx_Creator.cydsn/Generated_Source/PSoC6/pdl/devices/psoc6/include/ip/: cyip_crypto_v2.h  cyip_efuse_data_psoc6_01.h  cyip_pass.h
Example_CapSense/Onethinx_Creator.cydsn/Generated_Source/PSoC6/pdl/drivers/peripheral/gpio/: cy_gpio.c
Example_CapSense/Onethinx_Creator.cydsn/Generated_Source/PSoC6/pdl/drivers/peripheral/lvd/: cy_lvd.h
Example_CapSense/Onethinx_Creator.cydsn/Generated_Source/PSoC6/pdl/drivers/peripheral/scb/: cy_scb_common.c  cy_scb_common.h  cy_scb_ezi2c.c  cy_scb_ezi2c.h  cy_scb_i2c.c  cy_scb_i2c.h  cy_scb_spi.c  cy_scb_spi.h  cy_scb_uart.h
Example_CapSense/Onethinx_Creator.cydsn/Generated_Source/PSoC6/pdl/drivers/peripheral/syslib/iar/: cy_syslib_iar.s
Example_CapSense/Onethinx_Creator.cydsn/Generated_Source/PSoC6/pdl/middleware/ble/: cy_ble_clk.c
Example_CapSense/Onethinx_Creator.cydsn/TopDesign/: TopDesign.cysch
Example_CapSense/Onethinx_Creator.cydsn/codegentemp/: CapSense.h  CapSense_Control.h  CapSense_RegisterMap.h  CapSense_Sensing.c  CapSense_Sensing.h  CapSense_Structure.h  CapSense_Tuner.c  CapSense_Tuner.h  I2C_CapSense.c  I2C_CapSense.h  I2C_CapSense_SCBCLK.h  Onethinx_Creator.ctl  Onethinx_Creator.cycdx  Onethinx_Creator.pci  Onethinx_Creator.pco  Onethinx_Creator.plc_log  Onethinx_Creator.route  Onethinx_Creator.rt_log  Onethinx_Creator.sdc  Onethinx_Creator.sdf  Onethinx_Creator.tr  Onethinx_Creator.v  Onethinx_Creator.vh2  Onethinx_Creator.wde  Onethinx_Creator_p.pco  Onethinx_Creator_p.vh2  Onethinx_Creator_r.vh2  Onethinx_Creator_t.lib  Onethinx_Creator_t.vh2  Onethinx_Creator_timing.html  Onethinx_Creator_u.sdc  bitstream.txt  cyfitter.h  cyfitter_cfg.c  cyfitter_gpio.h  cyfitter_sysint_cfg.c  cyfitter_sysint_cfg.h  elab_dependencies.txt  generated_files.txt  project.h  (+2 more)
Example_CapSense/Onethinx_Creator.cydsn/codegentemp/lcpsoc3/: index
Example_CapSense/source/: main.c
Example_CapSense/source/OnethinxCore/: OnethinxCore01.h  OnethinxExt01.c
Example_DevKitLightSensor/: CMakeLists.txt  README.md  meson.build
Example_HelloWorld/: CMakeLists.txt  README.md  meson.build
Example_LoRa/: CMakeLists.txt  README.md  meson.build
Example_SWV/: README.md  meson.build
OnethinxCreator_CapSense/: CMakeLists.txt  README.md
OnethinxCreator_HelloWorld/: CMakeLists.txt
(+850 files in other folders)
